css fix for buy now button alignment on home page slides on mobile

--- a/public/styles/_kali.scss
+++ b/public/styles/_kali.scss
@@ -768,7 +768,7 @@ hr {
 
 #fullpage .product-main {
     .buy-button {
-        margin: initial;
+        margin: 6px 0;
     }
 }
 
